<resources>
    <string name="app_name">MyCoins</string>
    <string name="placeholderLong">LoremIpsum</string>
    <string name="placeholderShort">Lor</string>
    <string name="placeholderMed">Lorem</string>
    <string name="login">Login</string>
    <string name="passwordPlaceholder"> Password here</string>
    <string name="emailPlaceholder"> Email address here</string>
    <string name="sign_up">Sign Up</string>
</resources>