<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/coinRank"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/coinLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/placeholderShort" />

        <ImageView
            android:id="@+id/coinLogo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/coinName"
            app:layout_constraintStart_toEndOf="@+id/coinRank"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/coinName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/coinTag"
            app:layout_constraintEnd_toStartOf="@+id/coinPrice"
            app:layout_constraintStart_toEndOf="@+id/coinLogo"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/placeholderLong"/>

        <TextView
            android:id="@+id/coinTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/coinName"
            app:layout_constraintStart_toStartOf="@id/coinName"
            app:layout_constraintTop_toBottomOf="@id/coinName"
            tools:text="@string/placeholderShort"/>

        <TextView
            android:id="@+id/coinPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/coinMCap"
            app:layout_constraintEnd_toStartOf="@+id/coinChange24h"
            app:layout_constraintStart_toEndOf="@id/coinName"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/placeholderMed" />

        <TextView
            android:id="@+id/coinMCap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/coinPrice"
            app:layout_constraintStart_toStartOf="@id/coinPrice"
            app:layout_constraintTop_toBottomOf="@id/coinPrice"
            tools:text="@string/placeholderMed" />

        <TextView
            android:id="@+id/coinChange24h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/coinPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/placeholderShort"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>